test(files): add level IO/registry test suite; refactor: clean up file loaders
- Add new tests:
  - GameLevelBootstrapTest, LevelIOTest, LevelPatternLoaderTest, RegistryEntityPlacerTest
  - Extend coverage for DialogueDisplay, RobotFightingGame, TableSpace, BaseEndScreenDisplays,
    SaveGame, RenderComponent, TextEffectsHelpers
- Add unit-test fixtures under core/assets/unit-tests/

- Refactor & cleanup:
  - FileLoader, GameLevelBootstrap, LevelIO, LevelPatternLoader, RegistryEntityPlacer
  - Improve logging, null/blank handling, and first-wins semantics
  - Minor tidy-ups for readability and consistency

- Remove legacy test:
  - Delete core/src/test/com/csse3200/game/files/FileLoaderTest.java (superseded)

No functional changes intended; improves test coverage and code clarity.
Branch: maps-refactor-i